--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "graphql-request": "^1.5.1",
     "hyperhtml": "^2.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0"
+  },
   "scripts": {
     "start": "parcel src/index.html -p 7000",
     "build": "parcel build src/index.html -d . --public-url ."
